--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,56 @@
+@font-face
+{
+    font-family: 'computermodern';
+    src: url('../fonts/computer-modern/cmunrm.ttf');
+}
+
+@font-face
+{
+    font-family: 'computermodern-bold';
+    src: url('../fonts/computer-modern/cmunssdc.ttf');
+}
+
+@font-face
+{
+    font-family: 'bellota';
+    src: url('../fonts/bellota/Bellota-Italic.otf');
+}
+
+@font-face
+{
+    font-family: 'bellota-bold';
+    src: url('../fonts/bellota/Bellota-BoldItalic.otf');
+}
+
+body
+{
+    line-height: 27px;
+}
+
 .top_bar
 {
     width: 100%;
     min-width: 1050px; 
     height: 40px;
-    background-color: #3498db;
+    background-color: #fd9644;
     border-bottom: 5px solid #2980b9 ; 
     margin: 0 0 10px 0;
     display: inline-flex;
 
+}
+
+.logo a
+{
+    font-family: 'bellota-bold', sans-serif;
+    margin-left: 30px;
+    font-size: 150%;
+    position: relative;
+    top:9%;
+    text-shadow: #73B6E9 0.5px 0.5px 0px;
+    color: #10B6BA;
+}
+
+a :hover
+{
+    text-decoration: none;
 }
