--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,25 @@ a :hover
 {
     text-decoration: none;
 }
+
+nav 
+{
+    float: right;
+    right: 1px;
+    position: absolute;
+    margin: 10px;
+}
+
+nav a
+{
+    position: relative;
+    color: #ffff;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+nav a:hover
+{
+    border-bottom: 7px solid #fff;
+    color: #fff;
+}
