styled user details panel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@
 body
 {
     line-height: 27px;
+    background-color: #E6EAE8;
 }
 
 .top_bar
@@ -36,6 +37,8 @@ body
     border-bottom: 5px solid #e3e4e8 ; 
     margin: 0 0 10px 0;
     display: inline-flex;
+    position: fixed;
+    z-index: 10;
 
 }
 
@@ -66,7 +69,7 @@ nav
 nav a
 {
     position: relative;
-    color: #ffff;
+    color: #2a2c38;
     text-decoration: none;
     font-size: 17px;
 }
@@ -75,4 +78,30 @@ nav a:hover
 {
     border-bottom: 7px solid #fff;
     color: #fff;
+}
+
+.wrapper 
+{
+	margin: 0 auto;
+	top: 50px;
+	position: relative;
+	padding: 0 10px;
+	width: 75%;
+	min-width: 950px;
+}
+
+.column 
+{
+	background-color: #fff;
+	padding: 10px;
+	border: 1px solid #D3D3D3;
+	border-radius: 5px;
+	box-shadow: 2px 2px 1px #D3D3D3;
+	z-index: -1;
+}
+
+.user_details {
+	width: 250px;
+	float: left;
+	margin-bottom: 20px;
 }
