--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -74,8 +74,8 @@ a
     font-family: 'bellota-bold', sans-serif;
     width: 100%;
     height: 90px;
-    background-color: #fd9644;
-    color: #fff;
+    background-color: #dcdde1;
+    color: #dcdde165;
     text-align: center;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px
@@ -83,22 +83,22 @@ a
 
 .login_header h1
 {
-    font-family: 'bellota-bold', sans-serif;
+    font-family: 'computermodern', sans-serif;
     margin-top: 0;
     margin-bottom: 0;
-    color: #d35400;
-    text-shadow: #000 0.5px 0.5px 0px;
+    color: #2a2c38;
+    text-shadow: #73B6E9 0.5px 0.5px 0px;
     font-size: 250%;
 }
 
 input[type="submit"]
 {
-    background-color: #fd9644;
-    border: 1px solid #fd9644;
+    background-color: #dcdde1;
+    border: 1px solid #fd9744d3;
     border-radius: 3px;
     margin: 5px;
     padding: 5px 10px 5px 10px;
-    color: #d35400;
+    color: #dcdde165;
     text-shadow: #7386e2;
     font-family: 'bellota-bold', sans-serif;
     font-size: 100%;
