--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,15 @@ nav a:hover
 	float: left;
 	margin-bottom: 20px;
 }
+
+.user_details_left_right {
+	width: 120px;
+	display: inline-table;
+	position: absolute;
+}
+
+.user_details img {
+	height: 120px;
+	border-radius: 5px;
+	margin-right: 5px;
+}
