--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,20 +100,68 @@ nav a:hover
 	z-index: -1;
 }
 
-.user_details {
+.user_details 
+{
 	width: 250px;
 	float: left;
 	margin-bottom: 20px;
 }
 
-.user_details_left_right {
+.user_details_left_right 
+{
 	width: 120px;
 	display: inline-table;
 	position: absolute;
 }
 
-.user_details img {
+.user_details img 
+{
 	height: 120px;
 	border-radius: 5px;
 	margin-right: 5px;
+}
+
+.main_column 
+{
+	float:right;
+	width: 70%;
+	z-index: -1;
+	min-height: 160px;
+}
+
+.post_form {
+	width: 100%;
+}
+
+.post_form textarea {
+	width: 81%;
+	height: 60px;
+	border-radius: 3px;
+	margin-right: 5px;
+	border: 1px solid #D3D3D3;
+	font-size: 12px;
+	padding: 5px;
+}
+
+textarea:focus {
+	outline: 0;
+}
+
+.post_form input[type="submit"] {
+	width: 11%;
+	height: 60px;
+	border: none;
+	border-radius: 3px;
+	background-color: #3498db;
+	font-family: 'Bellota-BoldItalic', sans-serif;
+	color: #1E75CA;
+	text-shadow: #73B6E2 0.5px 0.5px 0px;
+	font-size: 90%;
+	position: absolute;
+	outline: 0;
+	margin: 0;
+}
+
+.post_form input[type="submit"]:active {
+	padding: 5px 4px 4px 5px;
 }
